--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,43 +1,63 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Narwhal.App",
-            "type": "chrome",
-            "request": "launch",
-            "url": "http://127.0.0.1",
-            "webRoot": "${workspaceFolder}\\Narwhal.App"
-        },
-        {
-            "name": "Narwhal.Importer - Navwarnings",
-            "type": "PowerShell",
-            "request": "launch",
-            "script": "${workspaceFolder}\\Narwhal.Importer\\import_navwarnings.ps1",
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "name": "Narwhal.Importer - Tracking",
-            "type": "PowerShell",
-            "request": "launch",
-            "script": "${workspaceFolder}\\Narwhal.Importer\\import_tracking.ps1",
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "name": "Narwhal.ETL - Navwarnings",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}\\Narwhal.ETL\\process_navwarnings.py",
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "Narwhal.ETL - Tracking",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}\\Narwhal.ETL\\process_tracking.py",
-            "console": "integratedTerminal"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Narwhal.Service",
+      "type": "coreclr",
+      "request": "launch",
+      "program": "${workspaceFolder}/Narwhal.Service/bin/Debug/netcoreapp3.1/Narwhal.Service.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}",
+      "stopAtEntry": false,
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+      },
+      "env": {
+        "ASPNETCORE_URLS": "http://127.0.0.1:6161",
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "sourceFileMap": {
+        "/Views": "${workspaceFolder}/Views"
+      }
+    },
+    {
+      "name": "Narwhal.App",
+      "type": "chrome",
+      "request": "launch",
+      "url": "http://127.0.0.1",
+      "webRoot": "${workspaceFolder}\\Narwhal.App"
+    },
+    {
+      "name": "Narwhal.Importer - Navwarnings",
+      "type": "PowerShell",
+      "request": "launch",
+      "script": "${workspaceFolder}\\Narwhal.Importer\\import_navwarnings.ps1",
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "name": "Narwhal.Importer - Tracking",
+      "type": "PowerShell",
+      "request": "launch",
+      "script": "${workspaceFolder}\\Narwhal.Importer\\import_tracking.ps1",
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "name": "Narwhal.ETL - Navwarnings",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}\\Narwhal.ETL\\process_navwarnings.py",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Narwhal.ETL - Tracking",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}\\Narwhal.ETL\\process_tracking.py",
+      "console": "integratedTerminal"
+    }
+  ]
 }
